src/main/k8s/deploy.yaml
# Deployment and service for praise-wm.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: praise-wm
  name: praise-wm
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
  selector:
    matchLabels:
      app: praise-wm
  template:
    metadata:
      labels:
        app: praise-wm
    spec:
      containers:
      - image: praise-wm-placeholder
        name: praise-wm
        ports:
        - containerPort: 4567
          name: http
        volumeMounts:
        - name: data
          mountPath: /opt/praisewm/data
        livenessProbe:
          httpGet:
            port: 4567
            path: /
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: praise-wm

---

apiVersion: v1
kind: Service
metadata:
  name: praise-wm
spec:
  selector:
    app: praise-wm
  ports:
    - port: 80
      targetPort: 4567
      name: http
