src/main/k8s/mysql.yaml
# Deployment and service for MySQL

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: database
          mountPath: /var/lib/mysql
        livenessProbe:
          initialDelaySeconds: 300
          exec:
            command:
            - mysqladmin
            - ping
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: mysql

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app: mysql
